# MIREA-Student-ASSistant

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  OURbot.py  README.md  Users.db  Users.py  ]  application.py  dbworker.py  keyboard.py  requirements.txt  schedule.py  setup.cfg  setup.py  temp.py
Mirea-Stud-Assistant/: application.py  dbworker.py
Mirea_Stud_Assistant/: .gitignore  application.py  dbworker.py  schedule.py
Schedule/: display_schedule.py  parse_xslx.py  requests_to_schedule.py
Victoria/: display_food.py  requests_to_victoria.py
doc/source/: conf.py  dbworker.rst  index.rst  keyboard.rst
src/: application.py  config.py  db.py  dbworker.py  deadLine.py  food.py  keyboard.py  mirea.db  parservic.py  professors.py  schedule.py  search.py  server.py  states.py  subs.py  table.xlsx
src/MIREA_Student_ASSistant.egg-info/: PKG-INFO  SOURCES.txt
src/src/xlsx/: Г19.xlsx  Г20.xlsx  К16.xlsx  К17.xlsx  К18.xlsx  К19.xlsx  К20.xlsx  Р19.xlsx  Р20.xlsx  У19.xlsx  Э19.xlsx
src/xlsx/: Б20.xlsx  Г18.xlsx  Р16.xlsx  Р18.xlsx  У20.xlsx  Э18.xlsx
