[metadata]
name = MIREA-Student-ASSistant
version = 0.0.1
author = Gennady Govzheev, Alexander Zverev, Artem Anikin
description = Telegram student bot-assistant
url = https://github.com/h0llu/mirea-bot-project
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mirea MIREA bot timetable student schedule
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src